force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Owner_Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Segment__c</fullName>
    <description>Sales Segment value from the user record</description>
    <formula>TEXT( Owner_Lookup__r.Sales_Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sales Segment</label>
    <type>Text</type>
</CustomField>