force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <color>#FF6600</color>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
                <color>#33CCFF</color>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#33CC00</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#FF0000</color>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>