force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Plan_to_engage_this_account__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_engage_this_account__c</fullName>
    <inlineHelpText>Why is this account unlikely to yield a major opportunity in the near term?, What trigger events would make this account rise in priority?  How will you monitor these trigger events? What are the most likely opportunities given what you know?</inlineHelpText>
    <label>Plan To Engage This Account</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>