force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Plan_To_Realize_The_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Plan_To_Realize_The_Opportunity__c</fullName>
    <label>Plan To Realize The Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>