force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Primary_CDE__c.field-meta.xml
<CustomField>
    <fullName>Primary_CDE__c</fullName>
    <formula>IF( 
NOT(ISBLANK(  Account__r.Primary_CDE__c  )),  Account__r.Primary_CDE__r.FirstName  &amp; &quot; &quot; &amp; Account__r.Primary_CDE__r.LastName, null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary CDE</label>
    <type>Text</type>
</CustomField>