force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Primary_CDE_DB_R__c.field-meta.xml
<CustomField>
    <fullName>Primary_CDE_DB_R__c</fullName>
    <formula>IF( NOT(ISBLANK( Account__r.Primary_CDE_DB_R__c )), Account__r.Primary_CDE_DB_R__r.FirstName &amp; &quot; &quot; &amp; Account__r.Primary_CDE_DB_R__r.LastName, null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary CDE - DM</label>
    <type>Text</type>
</CustomField>