force-app/main/default/objects/SFDC_Acct_Plan__c/fields/PY_Net_New_Billings__c.field-meta.xml
<CustomField>
    <fullName>PY_Net_New_Billings__c</fullName>
    <formula>Account__r.PY_Net_New_Billings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD: PY Billings minus the year before PY Billings (i.e. 2013 -2012)</inlineHelpText>
    <label>PY Net New Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>