force-app/main/default/objects/SFDC_Acct_Plan__c/fields/PY_Total_Billings__c.field-meta.xml
<CustomField>
    <fullName>PY_Total_Billings__c</fullName>
    <formula>Account__r.PY_Total_Billings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled From TBD: Total PY Billings</inlineHelpText>
    <label>PY Total Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>