force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Realizing_The_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Realizing_The_Solutions__c</fullName>
    <inlineHelpText>Through which individual relationships will we realize the solutions? What is the expected timeline? How will we engage (phone, in-person, etc.)? What are the decision makers’ personal goals, motivation, concerns?</inlineHelpText>
    <label>Realizing The Solutions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>