force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Revenue_Goal__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Goal__c</fullName>
    <label>Revenue Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>