force-app/main/default/objects/SFDC_Acct_Plan__c/fields/RM_BDE__c.field-meta.xml
<CustomField>
    <fullName>RM_BDE__c</fullName>
    <label>RM BDE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>