force-app/main/default/objects/SFDC_Acct_Plan__c/fields/RSM_of_Owner__c.field-meta.xml
<CustomField>
    <fullName>RSM_of_Owner__c</fullName>
    <formula>Owner_Lookup__r.IM_RSM__r.FirstName   &amp; &quot; &quot; &amp;   Owner_Lookup__r.IM_RSM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Director of account plan owner. Receives account plan approval notices.</inlineHelpText>
    <label>Director of Owner</label>
    <type>Text</type>
</CustomField>