force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Running_User_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Coverage__c</fullName>
    <description>Used for List View to accurately show &quot;My Account Plans&quot; to anyone who is marked in one of the four account coverage fields (BDE, CDE, BDE-DB&amp;R, or CDE-DB&amp;R)</description>
    <formula>if ( OR($User.Id =  Account__r.Primary_BDE__r.Id, $User.Id =  Account__r.Primary_CDE__r.Id, $User.Id =  Account__r.Primary_BDE_DB_R__r.Id, $User.Id =  Account__r.Primary_CDE_DB_R__r.Id)  , &quot;My Account Plans&quot;, &quot;Not&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User Coverage</label>
    <type>Text</type>
</CustomField>