force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Share_of_Wallet_DM__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet_DM__c</fullName>
    <formula>Account__r.Share_of_Wallet_DM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from Storage Profile: DM ONLY: Amount of Storage that IM provides vs what the customer&apos;s total estimated storage needs</inlineHelpText>
    <label>Share of Wallet (DM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>