force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Share_of_Wallet_Records_Management__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet_Records_Management__c</fullName>
    <description>See case 03214277</description>
    <inlineHelpText>Estimate our share of total customer spend in the Records Management product category</inlineHelpText>
    <label>Share of Wallet - Records Management</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>