force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Significant_Historical_Events__c.field-meta.xml
<CustomField>
    <fullName>Significant_Historical_Events__c</fullName>
    <inlineHelpText>Summarize any strategically important historical events that impact the selling strategy for this customer</inlineHelpText>
    <label>Significant Historical Events</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>