force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Solutions__c.field-meta.xml
<CustomField>
    <fullName>Solutions__c</fullName>
    <inlineHelpText>Over the next 12 months, what solution(s) should we deploy to progress the customer’s information management program towards our goal? What steps must we take to develop the solution(s) with the customer? What is the value to the customer and to IM?</inlineHelpText>
    <label>Solutions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>