force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Sr_Customer_Development_Executive__c.field-meta.xml
<CustomField>
    <fullName>Sr_Customer_Development_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior CDE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>