force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Strategic_Objective__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective__c</fullName>
    <inlineHelpText>This is the big picture strategy for the entire account and should be a clear statement of WHAT you are going to do to achieve the plan. 

Example: To win the unvended cube with Company XYZ that allows us to amend and affiliate all existing accounts.</inlineHelpText>
    <label>Account Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>