force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Strategies__c.field-meta.xml
<CustomField>
    <fullName>Strategies__c</fullName>
    <label>Strategies</label>
    <summaryForeignKey>SFDC_Strategy__c.SFDC_Acct_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>