force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Strategy_Count__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Count__c</fullName>
    <label>Strategy Count</label>
    <summaryForeignKey>SFDC_Strategy__c.SFDC_Acct_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>