force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Strategy_Summary__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Summary__c</fullName>
    <inlineHelpText>Summarize your strategy to grow the account in one or two sentences</inlineHelpText>
    <label>Strategy Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>