force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Total_Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Total_Cubic_Feet__c</fullName>
    <formula>Account__r.Total_Cubic_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from TBD: Total Quantity of Storage RM ONLY</inlineHelpText>
    <label>Total Cubic Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>