force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Total_of_Unique_Service_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Unique_Service_Addresses__c</fullName>
    <formula>Account__r.Total_of_Unique_Service_Addresses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from SF Service Address on Customer Account: Total # of Unique Service Addresses of DM Customers</inlineHelpText>
    <label>Total # of Unique Service Addresses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>