force-app/main/default/objects/SFDC_Acct_Plan__c/fields/Upgrade_to_Territory_Plan__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_to_Territory_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you would like to upgrade from a Territory Brief to a Territory Plan, select this checkbox. Please note, you will not be able to go back to a brief after you select and save this field.</inlineHelpText>
    <label>Upgrade to Territory Plan?</label>
    <type>Checkbox</type>
</CustomField>