force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/Global_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>Global_Account_Plan</fullName>
    <active>true</active>
    <label>Global Account Plan</label>
</RecordType>