force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IME_Account_Plan_Approved.recordType-meta.xml
<RecordType>
    <fullName>IME_Account_Plan_Approved</fullName>
    <active>true</active>
    <description>Approved Account Plan without the &apos;Submit for Approval&apos; button and all fields locked on page layout</description>
    <label>IME_Account Plan - Approved</label>
</RecordType>