force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IME_Account_Plan_Draft.recordType-meta.xml
<RecordType>
    <fullName>IME_Account_Plan_Draft</fullName>
    <active>true</active>
    <description>Draft Account Plan without the &apos;Submit for Approval&apos; button displayed</description>
    <label>IME_Account Plan - Draft</label>
</RecordType>