force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IME_Account_Plan_Post_Approval_Edit.recordType-meta.xml
<RecordType>
    <fullName>IME_Account_Plan_Post_Approval_Edit</fullName>
    <active>true</active>
    <description>Account Plan that has been edited post approval</description>
    <label>IME_Account Plan - Post Approval Edit</label>
</RecordType>