force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IME_Account_Plan_Submit_for_Approval.recordType-meta.xml
<RecordType>
    <fullName>IME_Account_Plan_Submit_for_Approval</fullName>
    <active>true</active>
    <description>Account Plan meeting minimum requirements for the &apos;Submit for Approval&apos; button to be displayed</description>
    <label>IME_Account Plan - Submit for Approval</label>
</RecordType>