force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IMNA_Account_Brief.recordType-meta.xml
<RecordType>
    <fullName>IMNA_Account_Brief</fullName>
    <active>true</active>
    <description>Account briefs for North America</description>
    <label>IMNA Account Brief</label>
</RecordType>