force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IMNA_Account_Data_Management_Plan.recordType-meta.xml
<RecordType>
    <fullName>IMNA_Account_Data_Management_Plan</fullName>
    <active>true</active>
    <description>Data Management Rep Account Plans for North America</description>
    <label>IMNA Account Data Management Plan</label>
</RecordType>