force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IMNA_Account_National_Vertical_Plan.recordType-meta.xml
<RecordType>
    <fullName>IMNA_Account_National_Vertical_Plan</fullName>
    <active>true</active>
    <description>National/Vertical Rep Account Plans for North America</description>
    <label>IMNA Account National/Vertical Plan</label>
</RecordType>