force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IMNA_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>IMNA_Account_Plan</fullName>
    <active>true</active>
    <description>Account Plans for North America</description>
    <label>IMNA Account Plan</label>
</RecordType>