force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/IMNA_Account_Territory_Plan.recordType-meta.xml
<RecordType>
    <fullName>IMNA_Account_Territory_Plan</fullName>
    <active>true</active>
    <description>Territory Rep Account Plans for North America</description>
    <label>IMNA Account Territory Plan</label>
</RecordType>