force-app/main/default/objects/SFDC_Acct_Plan__c/recordTypes/INTL_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>INTL_Account_Plan</fullName>
    <active>true</active>
    <description>INTL Account Plans</description>
    <label>INTL Account Plan</label>
</RecordType>