force-app/main/default/objects/SFDC_Acct_Plan__c/validationRules/Account_Plan_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Plan_Status_Validation</fullName>
    <active>true</active>
    <description>User should not change Account Plan Status from UI.</description>
    <errorConditionFormula>AND(OR( 
ISNEW(),ISCHANGED(Plan_Status__c)),OR( 
ISPICKVAL(Plan_Status__c,&quot;Submitted for Approval&quot;), 
ISPICKVAL(Plan_Status__c,&quot;Approved&quot;), 
ISPICKVAL(Plan_Status__c,&quot;Rejected&quot;) 
 )
)</errorConditionFormula>
    <errorMessage>Use approval process to Submit, Approve or Reject the Account Plan.</errorMessage>
</ValidationRule>