force-app/main/default/objects/SFDC_Acct_Plan__c/listViews/Account_Plans_Colombia.listView-meta.xml
<ListView>
    <fullName>Account_Plans_Colombia</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Planning_Year__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Account_Country__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IMGA_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Country__c</field>
        <operation>equals</operation>
        <value>Colombia</value>
    </filters>
    <label>Account Plans Colombia</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>IMLAAdmin</roleAndSubordinates>
    </sharedTo>
</ListView>