force-app/main/default/objects/SFDC_Acct_Plan__c/listViews/All_Account_Plans.listView-meta.xml
<ListView>
    <fullName>All_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Planning_Year__c</columns>
    <columns>Plan_Status__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Account_Country__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Poland</value>
    </filters>
    <label>All Account Plans</label>
</ListView>