force-app/main/default/objects/SFDC_Acct_Plan__c/listViews/IMNA_Account_Plans.listView-meta.xml
<ListView>
    <fullName>IMNA_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SFDC_Acct_Plan__c.IMNA_Account_National_Vertical_Plan</value>
    </filters>
    <label>IMNA Account Plans</label>
    <language>en_US</language>
</ListView>