force-app/main/default/objects/SFDC_Acct_Plan__c/listViews/My_Account_Plans.listView-meta.xml
<ListView>
    <fullName>My_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Enterprise_Account_Executive__c</columns>
    <columns>DB_R_Owner__c</columns>
    <columns>Primary_CDE__c</columns>
    <columns>Primary_CDE_DB_R__c</columns>
    <columns>Executive_Sponsor__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Account Plans</label>
    <language>en_US</language>
</ListView>